[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/player2/character_0006.png" type="Texture" id=1]
[ext_resource path="res://entities/player2/player_controller.gd" type="Script" id=2]
[ext_resource path="res://entities/player2/player_state_machine.gd" type="Script" id=3]
[ext_resource path="res://entities/player3/states/grounded.gd" type="Script" id=4]
[ext_resource path="res://entities/player3/states/in_air.gd" type="Script" id=5]
[ext_resource path="res://entities/player3/states/rising_jump.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
start_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
gravity_base = 1.0
in_air_state = NodePath("../InAir")
rising_jump_state = NodePath("../RisingJump")

[node name="RisingJump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
in_air_state = NodePath("../InAir")
grounded_state = NodePath("../Grounded")

[node name="InAir" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
grounded_state = NodePath("../Grounded")

[node name="Ladder" type="Node" parent="StateMachine"]

[node name="Character0006" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[node name="StateNameDisplayer" type="Label" parent="Character0006"]
margin_left = -52.0
margin_top = -39.0
margin_right = 52.0
margin_bottom = -21.0
text = "GROUNDED"
align = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.333, 0.333 )

[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
